--- a/bountifulFoods/aboutUs.html
+++ b/bountifulFoods/aboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -16,7 +16,7 @@
         <picture class="businessLogo">
             <source media="(max-width: 500px)" srcset="images/bountifulFoodsLogoSmall.png">
             <source media="(max-width: 900px)" srcset="images/bountifulFoodsLogoMedium.png">
-            <img src="images/bountifulFoodsLogoLarge.png" alt="Bountiful Foods logo.">
+            <img src="images/bountifulFoodsLogoLarge.png" alt="Bountiful Foods logo." loading="lazy">
         </picture>
 
         <h1 class="companyName">Bountiful Foods</h1>
@@ -68,21 +68,21 @@
             <picture>
                 <source media="(max-width: 600px)" srcset="images/facebookLogoSmall.png">
                 <source media="(max-width: 800px)" srcset="images/facebookLogoMedium.png">
-                <img src="images/facebookLogoLarge.png" alt="Facebook Logo">
+                <img src="images/facebookLogoLarge.png" alt="Facebook Logo" loading="lazy">
             </picture>
         </a>
         <a href="https://www.instagram.com/" class="instagram">
             <picture>
                 <source media="(max-width: 600px)" srcset="images/instagramLogoSmall.png">
                 <source media="(max-width: 800px)" srcset="images/instagramLogoMedium.png">
-                <img src="images/instagramLogoLarge.png" alt="Instagram Logo">
+                <img src="images/instagramLogoLarge.png" alt="Instagram Logo" loading="lazy">
             </picture>
         </a>
         <a href="https://www.pinterest.com/" class="pinterest">
             <picture>
                 <source media="(max-width: 600px)" srcset="images/pinterestLogoSmall.png">
                 <source media="(max-width: 800px)" srcset="images/pinterestLogoMedium.png">
-                <img src="images/pinterestLogoLarge.png" alt="Pinterest Logo">
+                <img src="images/pinterestLogoLarge.png" alt="Pinterest Logo" loading="lazy">
             </picture>
         </a>
         <p class="lastUpdate">Last Updated: <span id="lastUpdated"></span></p>
