--- a/bountifulFoods/index.html
+++ b/bountifulFoods/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="weatherCard">
-            <h2>Weather</h2>
+            <h2>Weather: Carlsbad</h2>
             <img src="images/placeholder2Medium.jpg" id="weatherImg" loading="lazy" alt="Weather Type Image">
             <p id="temp">Temperature</p>
             <p id="weatherType">Weather Condition</p>
