--- a/bountifulFoods/aboutUsThankYou.html
+++ b/bountifulFoods/aboutUsThankYou.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -16,7 +16,7 @@
         <picture class="businessLogo">
             <source media="(max-width: 500px)" srcset="images/bountifulFoodsLogoSmall.png">
             <source media="(max-width: 900px)" srcset="images/bountifulFoodsLogoMedium.png">
-            <img src="images/bountifulFoodsLogoLarge.png" alt="Bountiful Foods logo.">
+            <img src="images/bountifulFoodsLogoLarge.png" alt="Bountiful Foods logo." loading="lazy">
         </picture>
 
         <h1 class="companyName">Bountiful Foods</h1>
@@ -33,7 +33,6 @@
     </header>
 
     <main class="aboutMain">
-        <h1 class="thankYou">Thank you for contacting us!</h1>
 
         <h2 class="contactHeader">Get In Touch</h2>
         <p class="contactAddress">Address:<br>3481 Camden Street,<br>Carlsbad, CA</p>
@@ -45,6 +44,7 @@
 
         <h2 class="locationHeader">Where We're Located</h2>
         <iframe class="googleMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3464.711451463595!2d-117.29455870770987!3d33.112740598906434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc73453f3bee59%3A0xa4cb5592fcf65d2f!2sCarlsbad%2C%20CA!5e0!3m2!1sen!2sus!4v1670018771711!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
+        <br>
     </main>
 
     <footer>
@@ -53,21 +53,21 @@
             <picture>
                 <source media="(max-width: 600px)" srcset="images/facebookLogoSmall.png">
                 <source media="(max-width: 800px)" srcset="images/facebookLogoMedium.png">
-                <img src="images/facebookLogoLarge.png" alt="Facebook Logo">
+                <img src="images/facebookLogoLarge.png" alt="Facebook Logo" loading="lazy">
             </picture>
         </a>
         <a href="https://www.instagram.com/" class="instagram">
             <picture>
                 <source media="(max-width: 600px)" srcset="images/instagramLogoSmall.png">
                 <source media="(max-width: 800px)" srcset="images/instagramLogoMedium.png">
-                <img src="images/instagramLogoLarge.png" alt="Instagram Logo">
+                <img src="images/instagramLogoLarge.png" alt="Instagram Logo" loading="lazy">
             </picture>
         </a>
         <a href="https://www.pinterest.com/" class="pinterest">
             <picture>
                 <source media="(max-width: 600px)" srcset="images/pinterestLogoSmall.png">
                 <source media="(max-width: 800px)" srcset="images/pinterestLogoMedium.png">
-                <img src="images/pinterestLogoLarge.png" alt="Pinterest Logo">
+                <img src="images/pinterestLogoLarge.png" alt="Pinterest Logo" loading="lazy">
             </picture>
         </a>
         <p class="lastUpdate">Last Updated: <span id="lastUpdated"></span></p>
