Finished final project.

--- a/bountifulFoods/fresh.html
+++ b/bountifulFoods/fresh.html
@@ -20,9 +20,9 @@
         </picture>
 
         <h1 class="companyName">Bountiful Foods</h1>
+        <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
 
         <nav>
-            <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="fresh.html">Fresh Drink</a></li>
@@ -53,7 +53,7 @@
             </fieldset>
             <fieldset class="instructions">
                 <p>Extra Instructions <span class="redColor">*</span></p>
-                <label><textarea name="extraInfo" class="userInfo"></textarea></label>
+                <label><textarea name="extraInfo" class="specialInstructions"></textarea></label>
             </fieldset>
             <input type="submit" value="Get Drink" id="fruitBtn" onclick="clickCounter()">
         </form>
