--- a/bountifulFoods/index.html
+++ b/bountifulFoods/index.html
@@ -20,9 +20,9 @@
         </picture>
 
         <h1 class="companyName">Bountiful Foods</h1>
+        <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
 
         <nav>
-            <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="fresh.html">Fresh Drink</a></li>
@@ -39,7 +39,7 @@
 
         <div class="numOfDrinks">
             <h2>Amout of Drinks You've Created</h2>
-            <p># Amount</p>
+            <p class="drinkAmount"># Amount</p>
         </div>
 
         <div class="costalInformation">
@@ -119,6 +119,7 @@
         <p class="phoneNum">Phone Number:<br>(480) 387-2466</p>
         <p class="lastUpdate">Last Updated: <span id="lastUpdated"></span></p>
     </footer>
+    <script src="javascript/setLocalStorage.js"></script>
     <script src="javascript/hamburgerButton.js"></script>
     <script src="javascript/lastUpdated.js"></script>
     <script src="javascript/weatherAPI.js"></script>
